tetrate/tis0201/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-prevent-overlapping-destinationrules
spec:
  steps:
    - name: apply-desrule-policy
      try:
        - apply:
            file: ../check-host-subset-combination.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-destination-rbac
      try: 
        - apply:
            file: rbac.yaml

    - name: apply-desrule-resource
      try: 
        - apply:
            file: des-rule.yaml
            
    - name: apply-good-resource
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-resource (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
